--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,11 @@
     <%= render 'layouts/shim' %>
   </head>
   <body>
+    <% if @user != nil and @user.is_admin %>
+    <%= render 'layouts/header_admin' %>
+    <% else %>
     <%= render 'layouts/header' %>
+    <%end%>
     <div class="container">
       <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %>"><%= value %></div>
