--- a/app/views/layouts/_article.html.erb
+++ b/app/views/layouts/_article.html.erb
@@ -11,7 +11,7 @@
     Posted at: <%= @article.created_at %>.
     </span>
     <div class="container pull-right">
-      Posted by: <%= @user_name%>
+      Posted by: <%= @user.name%>
     </div>
     <div class="form-group">
     </div>
