--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,6 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
+    <div class="header">
     <div class="container">
       <%= link_to "Sports-Shack", root_path, id: "logo" %>
       <nav>
@@ -27,5 +28,6 @@
         </ul>
       </nav>
     </div>
+  </div>
   </div>
 </header>
