--- a/app/views/users/new_admin.html.erb
+++ b/app/views/users/new_admin.html.erb
@@ -3,7 +3,7 @@
 
 <div class="row">
 	<div class="span6 offset3">
-		<%= form_for(@user) do |f| %>
+		<%= form_for(@new_user) do |f| %>
 		<%= render 'shared/error_messages' %>
 
 		<%= f.label :name %>
@@ -24,5 +24,5 @@
 </div>
 
 <ul class="nav pull-right">
-	<li><%= link_to "Profile Page", current_user %></li>
+	<li><%= link_to "Admin Home Page", current_user %></li>
 </ul>
