Comments done. Genre Search added to home page. Styling improved

--- a/app/views/shared/_article_form.html.erb
+++ b/app/views/shared/_article_form.html.erb
@@ -4,6 +4,9 @@
 	<%= f.label :title %>
 	<%= f.text_field :title, placeholder: "Title" %>
 
+	<%= f.label :genre %>
+	<%= f.text_field :genre, placeholder: "Genre" %>
+
 	<%= f.label :content %>
     <%= f.text_area :content, size: "60x30", placeholder: "Create a new Article..."%>
   </div>
