--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,14 @@
 <% provide(:title, 'Sign up') %>
+<div class="container">
+<div class="container pull-left signup">
+  <div class"container">
 <h1>Sign up</h1>
+</div>
 
-<div class="row">
-  <div class="span6 offset3">
+<div class="pull-left">
+  <div class="pull-left">
     <%= form_for(@user) do |f| %>
-    <%= render 'shared/error_messages' %>
+    <%= render 'shared/error_messages', object: f.object %>
 
       <%= f.label :name %>
       <%= f.text_field :name %>
@@ -18,7 +22,9 @@
       <%= f.label :password_confirmation, "Confirmation" %>
       <%= f.password_field :password_confirmation %>
 
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Lets get started!", class: "btn btn-primary" %>
     <% end %>
   </div>
+</div>
+</div>
 </div>
