--- a/app/views/users/new_admin.html.erb
+++ b/app/views/users/new_admin.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, 'Create Administrator Account') %>
-<h1>Create Administrator Account</h1>
+<div id="home">
+<h3>Create Administrator Account</h3>
 
 <div class="row">
 	<div class="span6 offset3">
@@ -22,7 +23,4 @@
 		<% end %>
 	</div>
 </div>
-
-<ul class="nav pull-right">
-	<li><%= link_to "Admin Home Page", current_user %></li>
-</ul>
+</div>
