--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,6 +20,20 @@ html {
 
 body {
   padding-top: 60px;
+  background-image: asset-url("sports-background2.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+
+}
+
+.signup {
+  padding: 10px;
+  border: 5px solid;
+  border-style: outset;
+  width: 25cm;
+  background-color: rgba(192,192,192,0.4);
+  color: white;
+  text-shadow: 2px 2px $deepBlue;
 }
 
 section {
@@ -54,6 +68,7 @@ h1 {
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
+
 }
 
 h2 {
@@ -62,13 +77,25 @@ h2 {
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
-  color: $deepBlue;
 }
+
 
 p {
   font-size: 1.1em;
   line-height: 1.7em;
 }
+
+.underline {
+  text-decoration: underline;
+}
+
+#home {
+  padding: 10px;
+  border: 5px solid;
+  border-style: outset;
+  width: 25cm;
+  background-color: #FFFFFF;
+  }
 
 
 /* header */
@@ -183,11 +210,31 @@ aside {
     border-top: 1px solid #e8e8e8;
   }
 }
+
+#article {
+  padding: 10px;
+  border: 5px solid;
+  border-style: solid;
+  filter: blur(50px);
+}
+
+#article_content {
+  padding: 20px;
+  border: 2px solid;
+  background-color:rgba(192,192,192,0.4);
+}
+
+.title {
+  padding: 15px;
+  border: 10px solid #006600;
+  border-style: inset;
+  background-color: #FFFFFF;
+}
 .content {
   display: block;
 }
 .timestamp {
-  color: $deepBlue;
+  color: $grayLight;
 }
 .gravatar {
   float: left;
@@ -198,6 +245,42 @@ aside {
     height: 100px;
     margin-bottom: 5px;
   }
+}
+
+/* search result */
+
+#search_results {
+  padding: 15px;
+  border: 2px solid #006600;
+  border-style: inset;
+  width: 20cm;
+  background-color: #FFFFFF;
+
+}
+
+/* comments */
+
+.comments {
+  list-style: none;
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+  }
+}
+
+#comment {
+  padding: 15px;
+  border: 10px solid #006600;
+  border-style: inset;
+  width: 20cm;
+  background-color: #FFFFFF;
+}
+
+textarea#comment_area {
+  width: 20cm;
+  height: 2cm;
 }
 
 /* forms */
