Delete comments for admin and owners of comments

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @article.title) %>
-<h2>Article page - articles/show.html</h2>
+<h2>Article page</h2>
 <p>
    <%= render 'layouts/article' %>
 </p>
