--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,6 +3,11 @@
   <span class="timestamp">
     Posted <%= time_ago_in_words(comment.created_at) %> ago. By <%= User.find_by(id: comment.user_id).name%>.
   </span>
+  <% if current_user.id == comment.user_id || current_user.is_admin %>
+    <%= link_to "delete", comment, method: :delete,
+                                     data: { confirm: "Are you sure you want to delete this comment?" },
+                                     title: comment.content %>
+  <% end %>
 </div>
 <div class="container" style="height: 2.5cm">
 </div>
