--- a/app/views/users/show_admin.html.erb
+++ b/app/views/users/show_admin.html.erb
@@ -1,22 +1,21 @@
 <% provide(:title, "Admnistrator #{@user.name}") %>
-<h1>Admin home page</h1>
-<p>
-	Home page for an administrator
-	<ul class="nav pull-right">
-		<li><%= link_to "Article Management", add_article_path %></li>
-		<li><%= link_to "Create an administrator account", new_admin_path %></li>
-		<li><%= link_to "View all Users", '#' %></li>
-		<li><%= link_to "List of articles", '#' %></li>
-		<li><%= link_to "Delete/Edit comments from all users", '#' %></li>
-	</ul>
-	<div class="span12 pull-right">
-		<ul class="users">
-			<% @users.each do |user| %>
-			<li>
-				<%= link_to user.name, user %>
-			</li>
-			<% end %>
+<div class="container"id="home">
+	<h3>Admin home page</h3>
+		Home page for an administrator
+		<ul class="nav pull-right">
+			<li><%= link_to "Article Management", add_article_path %></li>
+			<li><%= link_to "Create an administrator account", new_admin_path %></li>
+			<li><%= link_to "View all Users", '#' %></li>
+			<li><%= link_to "List of articles", '#' %></li>
+			<li><%= link_to "Delete/Edit comments from all users", '#' %></li>
 		</ul>
-	</div>
+ 		<div class="span12 pull-right">
+			<ul class="users">
+				<% @users.each do |user| %>
+				<li>
+					<%= link_to user.name, user %>
+				</li>
+				<% end %>
+			</ul>
+		</div> 
 </div>
-</p>
