--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -4,10 +4,13 @@
     Posted <%= time_ago_in_words(comment.created_at) %> ago. By <%= User.find_by(id: comment.user_id).name%>.
   </span>
   <% if current_user.id == comment.user_id || current_user.is_admin %>
-    <%= link_to "delete", comment, method: :delete,
+    <div class="btn-group icons">
+    <button class="btn"><%= link_to "Delete", comment, method: :delete,
                                      data: { confirm: "Are you sure you want to delete this comment?" },
-                                     title: comment.content %>
+                                     title: comment.content %> </button>                               
+     <button class="btn"><%= link_to "Edit", edit_comment_path(comment),title: comment.content %> </button>
+     </div>                                
   <% end %>
 </div>
-<div class="container" style="height: 2.5cm">
+<div class="container" style="height: 3cm">
 </div>
