--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -7,8 +7,10 @@
     <div class="btn-group icons">
     <button class="btn"><%= link_to "Delete", comment, method: :delete,
                                      data: { confirm: "Are you sure you want to delete this comment?" },
+                                     onclick: "this.style.backgroundColor='#990000'",
                                      title: comment.content %> </button>                               
-     <button class="btn"><%= link_to "Edit", edit_comment_path(comment),title: comment.content %> </button>
+     <button class="btn"><%= link_to "Edit", edit_comment_path(comment),onclick: "this.style.backgroundColor='#009900'",
+     title: comment.content %> </button>
      </div>                                
   <% end %>
 </div>
