--- a/app/views/users/new_admin.html.erb
+++ b/app/views/users/new_admin.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, 'Create Administrator Account') %>
-<div id="home">
+<div class="underline" id="home">
 <h3>Create Administrator Account</h3>
 
 <div class="row">
-	<div class="span6 offset3">
+	<div class="span6">
 		<%= form_for(@new_user) do |f| %>
 		<%= render 'shared/error_messages' %>
 
