--- a/app/views/static_pages/all_articles.html.erb
+++ b/app/views/static_pages/all_articles.html.erb
@@ -2,6 +2,10 @@
 
 <div class="container home" id="home">
 	<h3 class="container center">Article List </h3>
+    <div class="pull-left">
+        <%= render 'shared/genre_search'%>
+      </div>
+    <div class="container pull-left">
     <% if @articles %>
     <div class="container pull-left">
     </div>
@@ -23,4 +27,5 @@
       </div>   
     <% end %>
   </div>
+</div>
 </div>
