--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -8,12 +8,14 @@
 		<% @users.each do |user| %>
 		<li><%= link_to user.name, :action => 'show', :id => user.id  %></li>
 	</ol>
+	<% if current_user.is_admin%>
 	<p>Users Comments:</p>
 	<ul>
 		<% user.comments.each do |comment|%>
 		<li><%= link_to comment.content, :action => 'show', :id => comment.id  %></li>
 		<% end %>
 		<% end %>
+		<%end%>
 	</ul>
 
 	<%else%>
