--- a/app/views/static_pages/all_articles.html.erb
+++ b/app/views/static_pages/all_articles.html.erb
@@ -3,6 +3,7 @@
 <div class="container home" id="home">
 	<h3 class="container center">Article List </h3>
     <div class="pull-left">
+        <p class="underline">Search by genre</p>
         <%= render 'shared/genre_search'%>
       </div>
     <div class="container pull-left">
