--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,6 +16,9 @@
       <%= f.label :email %>
       <%= f.text_field :email %>
 
+      <%= f.label "Favourite Sport" %>
+      <%= f.select :fav_sport, ["Football","Rugby","Tennis","Golf","Boxing","MMA","Snooker","Formula 1","Other"]%>
+
       <%= f.label :password %>
       <%= f.password_field :password %>
 
