--- a/app/views/layouts/_article.html.erb
+++ b/app/views/layouts/_article.html.erb
@@ -1,13 +1,16 @@
 <body id="article">
   <div class="container title">
   <div class="container">
-    <img src="https://s3.amazonaws.com/jetstrap-site/images/website/index/what_icon.png"
-    class="pull-right">
-    <div class="container pull-left">
+    <div class="container">
+    <div class="pull-right span4">
+    <%= image_tag("#{@article.picture}", :class => "image") %>
+  </div>
+    <div class=" pull-left span7">
       <h1>
        <%= @article.title %>
       </h1>
     </div>
+  </div>
     <span class=" pull-right">
     Genre: <%= @article.genre %>
     </span>
