--- a/app/views/shared/_article_form.html.erb
+++ b/app/views/shared/_article_form.html.erb
@@ -7,6 +7,9 @@
 	<%= f.label :genre %>
 	<%= f.text_field :genre, placeholder: "Genre" %>
 
+	<%= f.label "Image Tag" %>
+	<%= f.text_field :picture, placeholder: "Image Tag" %>
+
 	<%= f.label :content %>
     <%= f.text_area :content, size: "60x30", placeholder: "Create a new Article..."%>
   </div>
