Image tag added to article edit

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -11,6 +11,9 @@
 	<%= f.label :genre %>
 	<%= f.text_field :genre%>
 
+	<%= f.label "Image Tag" %>
+	<%= f.text_field :picture%>
+
 	<%= f.label :content %>
     <%= f.text_area :content, size: "60x30"%>
   </div>
