--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,7 +17,9 @@
       <%= f.text_field :email %>
 
       <%= f.label "Favourite Sport" %>
-      <%= f.select :fav_sport, ["Football","Rugby","Tennis","Golf","Boxing","MMA","Snooker","Formula 1","Other"]%>
+      <%= f.select :fav_sport, option_for_select = {"Football" => "Football","Rugby"=> "Rugby","Tennis"=> "Tennis","Golf" => "Golf",
+        "Boxing" => "Boxing","MMA" => "MMA",
+        "Snooker" => "Snooker","Formula 1" => "Formula 1","Other" => "Other"}%>
 
       <%= f.label :password %>
       <%= f.password_field :password %>
