--- a/app/views/users/show_admin.html.erb
+++ b/app/views/users/show_admin.html.erb
@@ -6,10 +6,10 @@
 		<%= render 'shared/user_search'%>
 	</div>
 	<div rows="12" cols="30" class="container pull-right">
-		<p>Articles</p>
+		<p>Articleshh</p>
 	<ul>
 		<% @articles.each do |article| %>
-		<li><%= link_to article.title, :action => 'show', :id => article.id  %></li><% end %>
+		<li><%= link_to article.title , "/articles/#{article.id}"  %></li><% end %>
 	</ul>
 </div>
 </div>
